@@ -1,5 +1,5 @@
 #
-# "$Id: cups.list,v 1.80 2000/10/02 14:34:21 mike Exp $"
+# "$Id: cups.list,v 1.81 2000/10/19 19:19:49 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for the Common UNIX Printing
 #   System (CUPS).
@@ -251,6 +251,8 @@ f 0444 root sys $DATADIR/model/deskjet.ppd ppd/deskjet.ppd
 f 0444 root sys $DATADIR/model/laserjet.ppd ppd/laserjet.ppd
 f 0444 root sys $DATADIR/model/epson9.ppd ppd/epson9.ppd
 f 0444 root sys $DATADIR/model/epson24.ppd ppd/epson24.ppd
+f 0444 root sys $DATADIR/model/okidata9.ppd ppd/okidata9.ppd
+f 0444 root sys $DATADIR/model/okidat24.ppd ppd/okidat24.ppd
 f 0444 root sys $DATADIR/model/stcolor.ppd ppd/stcolor.ppd
 f 0444 root sys $DATADIR/model/stphoto.ppd ppd/stphoto.ppd
 
@@ -507,5 +509,5 @@ f 0444 root sys $MANDIR/man5/printers.conf.5 man/printers.conf.man
 i 0555 root sys cups cups.sh
 
 #
-# End of "$Id: cups.list,v 1.80 2000/10/02 14:34:21 mike Exp $".
+# End of "$Id: cups.list,v 1.81 2000/10/19 19:19:49 mike Exp $".
 #
