@@ -1,5 +1,5 @@
 #
-# "$Id: Makefile,v 1.6 2000/08/01 18:18:03 mike Exp $"
+# "$Id: Makefile,v 1.7 2000/10/19 19:19:51 mike Exp $"
 #
 #   PPD file makefile for the Common UNIX Printing System (CUPS).
 #
@@ -29,7 +29,7 @@ include ../Makedefs
 #
 
 FILES	=	deskjet.ppd epson9.ppd epson24.ppd laserjet.ppd \
-		stcolor.ppd stphoto.ppd
+		okidata9.ppd okidat24.ppd stcolor.ppd stphoto.ppd
 
 #
 # Make everything...
@@ -53,5 +53,5 @@ install:
 	$(INSTALL_DATA) $(FILES) $(DATADIR)/model
 
 #
-# End of "$Id: Makefile,v 1.6 2000/08/01 18:18:03 mike Exp $".
+# End of "$Id: Makefile,v 1.7 2000/10/19 19:19:51 mike Exp $".
 #
